--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html {
     height: 100%;
     background-color: #214194;
-    background-image: url('img/bg.jpg');
-    background-size: cover;
+    /* background-image: url('img/garis-oval.png');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
+    background-size: contain; */
 }
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -33,6 +33,7 @@ section {
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 1rem;
+    position: relative;
 }
 
 .img-logo{
@@ -130,6 +131,7 @@ a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 1rem;
 }
 
 .trial{
@@ -186,4 +188,38 @@ table{
 .bg-danger {
     background-color: #f43838;
     color: #fff;
+}
+
+.bg-garis{
+    position: absolute;
+    width: 200%;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
+}
+
+.aksesoris1 {
+    width: 100px;
+    position: absolute;
+    z-index: -1;
+    top: 5%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.aksesoris2 {
+    width: 100px;
+    position: absolute;
+    z-index: -1;
+    bottom: 0;
+    right: 20%;
+    transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 840px){
+    .bg-garis {
+        width: 120%;
+    }
 }
